# class-conditional-gof

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  simple_tests.py
scripts/: build_figures.py  build_figures_and_tables.py  build_tables.py  report_convergence_rate.py  run_dt.py  run_pipeline.py  run_simulations.py  simple_tests.py
src/sim_score_study/: __init__.py  config.py  dgp.py  experiment.py  features.py  fitting.py  metrics.py  misspecification.py  models.py  plotting.py  reporting.py  utils.py
tests/: detection_summary.csv  plot_detection_heatmap.py  plot_detection_vs_magnitude.py  test_smoke.py  test_source_design.py
tests/detection_vs_magnitude/: summary.csv
