
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-score-study"
version = "0.1.0"
description = "Simulation study for score-based representations under source-level informative missingness."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "pyarrow>=14.0",
]

[tool.setuptools.packages.find]
where = ["src"]
